llvm/lib/Target/AMDIL/MDParser/AMDILMDParser.output
State 13 conflicts: 1 shift/reduce
State 14 conflicts: 1 shift/reduce
State 15 conflicts: 1 shift/reduce
State 16 conflicts: 1 shift/reduce
State 17 conflicts: 1 shift/reduce


Grammar

    0 $accept: ILProgram $end

    1 ILProgram: CompUnits

    2 CompUnits: CompUnit
    3          | CompUnits CompUnit

    4 CompUnit: CompUnitEnd
    5         | ILStates
    6         | MacroStates
    7         | DBGStates
    8         | MDStates
    9         | ILMain
   10         | DataStates

   11 ILMain: IL_VERSION Statements IL_ENDMAIN

   12 CompUnitEnd: STR_TOKEN

   13 ILStates: ILState
   14         | ILStates ILState

   15 MacroStates: MacroState
   16            | MacroStates MacroState

   17 DBGStates: DBGState
   18          | DBGStates DBGState

   19 DataStates: DataState
   20           | DataStates DataState

   21 MDStates: MDState
   22         | MDStates MDState

   23 ILState: IL_FUNC STR_TOKEN ';' STR_TOKEN Statements IL_ENDFUNC ';' STR_TOKEN
   24        | IL_FUNC STR_TOKEN ';' STR_TOKEN ';' STR_TOKEN Statements IL_ENDFUNC ';' STR_TOKEN

   25 MacroState: MACRO_START STR_TOKEN Statements MACRO_END
   26           | MACRO_START STR_TOKEN ';' STR_TOKEN Statements MACRO_END ';' STR_TOKEN
   27           | MACRO_START STR_TOKEN ';' STR_TOKEN ';' STR_TOKEN Statements MACRO_END ';' STR_TOKEN

   28 DBGState: DBG_START Statements DBG_END
   29         | DBG_START DBG_END

   30 DataState: DATA_START ':' STR_TOKEN ':' STR_TOKEN DataEntries ';' '#' DATA_END ':' INT_TOKEN
   31          | DATA_START ':' STR_TOKEN DataEntries ';' '#' DATA_END

   32 DataEntries: DataEntry
   33            | DataEntries DataEntry

   34 DataEntry: ';' '#' CompoundToken ':' StrList

   35 Statements: STR_TOKEN
   36           | Statements STR_TOKEN

   37 MDState: ARG_START ':' STR_TOKEN MDStmts ARG_END ':' STR_TOKEN

   38 MDStmts: MDStmt
   39        | MDStmts MDStmt

   40 MDStmt: MD_STRING ':' CompoundToken
   41       | MD_ERRWAR ':' CompoundToken ':' SpaceCompoundToken
   42       | MD_REFLECTION ':' INT_TOKEN ':' CompoundToken
   43       | MD_CONSTARG ':' INT_TOKEN ':' CompoundToken
   44       | MD_MEMORY ':' STR_TOKEN ':' INT_TOKEN
   45       | MD_MEMORY ':' STR_TOKEN
   46       | MD_INT ':' INT_TOKEN
   47       | MD_SAMPLER ':' CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN
   48       | MD_IMAGE ':' CompoundToken ':' CompoundToken ':' STR_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN
   49       | MD_SEMAPHORE ':' CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN
   50       | MD_COUNTER ':' CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN
   51       | MD_VALUE ':' CompoundToken ':' CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN
   52       | MD_POINTER ':' CompoundToken ':' CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' STR_TOKEN ':' INT_TOKEN ':' INT_TOKEN
   53       | MD_POINTER ':' CompoundToken ':' CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' STR_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' STR_TOKEN
   54       | MD_POINTER ':' CompoundToken ':' CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' STR_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' STR_TOKEN ':' INT_TOKEN ':' INT_TOKEN
   55       | MD_POINTER ':' CompoundToken ':' CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' STR_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' STR_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN
   56       | MD_INTLIST ':' IntList
   57       | MD_PRINTF ':' IntList ':' STR_TOKEN
   58       | MD_LGS
   59       | MD_QUEUE ':' CompoundToken ':' CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' STR_TOKEN

   60 CompoundToken: CompoundToken INT_TOKEN
   61              | CompoundToken STR_TOKEN
   62              | STR_TOKEN
   63              | INT_TOKEN

   64 SpaceCompoundToken: SpaceCompoundToken INT_TOKEN
   65                   | SpaceCompoundToken STR_TOKEN
   66                   | STR_TOKEN
   67                   | INT_TOKEN

   68 IntList: INT_TOKEN
   69        | IntList ':' INT_TOKEN

   70 StrList: STR_TOKEN
   71        | StrList ':' STR_TOKEN


Terminals, with rules where they appear

$end (0) 0
'#' (35) 30 31 34
':' (58) 30 31 34 37 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55
    56 57 59 69 71
';' (59) 23 24 26 27 30 31 34
error (256)
INT_TOKEN (258) 30 42 43 44 46 47 48 49 50 51 52 53 54 55 59 60 63
    64 67 68 69
STR_TOKEN (259) 12 23 24 25 26 27 30 31 35 36 37 44 45 48 52 53 54
    55 57 59 61 62 65 66 70 71
MD_VALUE (260) 51
MD_SAMPLER (261) 47
MD_MEMORY (262) 44 45
MD_COUNTER (263) 50
MD_INT (264) 46
MD_INTLIST (265) 56
MD_QUEUE (266) 59
MD_POINTER (267) 52 53 54 55
MD_IMAGE (268) 48
MD_PRINTF (269) 57
MD_STRING (270) 40
MD_LGS (271) 58
MD_SEMAPHORE (272) 49
MD_REFLECTION (273) 42
MD_CONSTARG (274) 43
MD_ERRWAR (275) 41
ARG_START (276) 37
ARG_END (277) 37
IL_VERSION (278) 11
IL_FUNC (279) 23 24
IL_ENDFUNC (280) 23 24
IL_ENDMAIN (281) 11
MACRO_START (282) 25 26 27
MACRO_END (283) 25 26 27
DBG_START (284) 28 29
DBG_END (285) 28 29
DATA_START (286) 30 31
DATA_END (287) 30 31


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
ILProgram (37)
    on left: 1, on right: 0
CompUnits (38)
    on left: 2 3, on right: 1 3
CompUnit (39)
    on left: 4 5 6 7 8 9 10, on right: 2 3
ILMain (40)
    on left: 11, on right: 9
CompUnitEnd (41)
    on left: 12, on right: 4
ILStates (42)
    on left: 13 14, on right: 5 14
MacroStates (43)
    on left: 15 16, on right: 6 16
DBGStates (44)
    on left: 17 18, on right: 7 18
DataStates (45)
    on left: 19 20, on right: 10 20
MDStates (46)
    on left: 21 22, on right: 8 22
ILState (47)
    on left: 23 24, on right: 13 14
MacroState (48)
    on left: 25 26 27, on right: 15 16
DBGState (49)
    on left: 28 29, on right: 17 18
DataState (50)
    on left: 30 31, on right: 19 20
DataEntries (51)
    on left: 32 33, on right: 30 31 33
DataEntry (52)
    on left: 34, on right: 32 33
Statements (53)
    on left: 35 36, on right: 11 23 24 25 26 27 28 36
MDState (54)
    on left: 37, on right: 21 22
MDStmts (55)
    on left: 38 39, on right: 37 39
MDStmt (56)
    on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
    58 59, on right: 38 39
CompoundToken (57)
    on left: 60 61 62 63, on right: 34 40 41 42 43 47 48 49 50 51 52
    53 54 55 59 60 61
SpaceCompoundToken (58)
    on left: 64 65 66 67, on right: 41 64 65
IntList (59)
    on left: 68 69, on right: 56 57 69
StrList (60)
    on left: 70 71, on right: 34 71


State 0

    0 $accept: . ILProgram $end

    STR_TOKEN    shift, and go to state 1
    ARG_START    shift, and go to state 2
    IL_VERSION   shift, and go to state 3
    IL_FUNC      shift, and go to state 4
    MACRO_START  shift, and go to state 5
    DBG_START    shift, and go to state 6
    DATA_START   shift, and go to state 7

    ILProgram    go to state 8
    CompUnits    go to state 9
    CompUnit     go to state 10
    ILMain       go to state 11
    CompUnitEnd  go to state 12
    ILStates     go to state 13
    MacroStates  go to state 14
    DBGStates    go to state 15
    DataStates   go to state 16
    MDStates     go to state 17
    ILState      go to state 18
    MacroState   go to state 19
    DBGState     go to state 20
    DataState    go to state 21
    MDState      go to state 22


State 1

   12 CompUnitEnd: STR_TOKEN .

    $default  reduce using rule 12 (CompUnitEnd)


State 2

   37 MDState: ARG_START . ':' STR_TOKEN MDStmts ARG_END ':' STR_TOKEN

    ':'  shift, and go to state 23


State 3

   11 ILMain: IL_VERSION . Statements IL_ENDMAIN

    STR_TOKEN  shift, and go to state 24

    Statements  go to state 25


State 4

   23 ILState: IL_FUNC . STR_TOKEN ';' STR_TOKEN Statements IL_ENDFUNC ';' STR_TOKEN
   24        | IL_FUNC . STR_TOKEN ';' STR_TOKEN ';' STR_TOKEN Statements IL_ENDFUNC ';' STR_TOKEN

    STR_TOKEN  shift, and go to state 26


State 5

   25 MacroState: MACRO_START . STR_TOKEN Statements MACRO_END
   26           | MACRO_START . STR_TOKEN ';' STR_TOKEN Statements MACRO_END ';' STR_TOKEN
   27           | MACRO_START . STR_TOKEN ';' STR_TOKEN ';' STR_TOKEN Statements MACRO_END ';' STR_TOKEN

    STR_TOKEN  shift, and go to state 27


State 6

   28 DBGState: DBG_START . Statements DBG_END
   29         | DBG_START . DBG_END

    STR_TOKEN  shift, and go to state 24
    DBG_END    shift, and go to state 28

    Statements  go to state 29


State 7

   30 DataState: DATA_START . ':' STR_TOKEN ':' STR_TOKEN DataEntries ';' '#' DATA_END ':' INT_TOKEN
   31          | DATA_START . ':' STR_TOKEN DataEntries ';' '#' DATA_END

    ':'  shift, and go to state 30


State 8

    0 $accept: ILProgram . $end

    $end  shift, and go to state 31


State 9

    1 ILProgram: CompUnits .
    3 CompUnits: CompUnits . CompUnit

    STR_TOKEN    shift, and go to state 1
    ARG_START    shift, and go to state 2
    IL_VERSION   shift, and go to state 3
    IL_FUNC      shift, and go to state 4
    MACRO_START  shift, and go to state 5
    DBG_START    shift, and go to state 6
    DATA_START   shift, and go to state 7

    $default  reduce using rule 1 (ILProgram)

    CompUnit     go to state 32
    ILMain       go to state 11
    CompUnitEnd  go to state 12
    ILStates     go to state 13
    MacroStates  go to state 14
    DBGStates    go to state 15
    DataStates   go to state 16
    MDStates     go to state 17
    ILState      go to state 18
    MacroState   go to state 19
    DBGState     go to state 20
    DataState    go to state 21
    MDState      go to state 22


State 10

    2 CompUnits: CompUnit .

    $default  reduce using rule 2 (CompUnits)


State 11

    9 CompUnit: ILMain .

    $default  reduce using rule 9 (CompUnit)


State 12

    4 CompUnit: CompUnitEnd .

    $default  reduce using rule 4 (CompUnit)


State 13

    5 CompUnit: ILStates .
   14 ILStates: ILStates . ILState

    IL_FUNC  shift, and go to state 4

    IL_FUNC   [reduce using rule 5 (CompUnit)]
    $default  reduce using rule 5 (CompUnit)

    ILState  go to state 33


State 14

    6 CompUnit: MacroStates .
   16 MacroStates: MacroStates . MacroState

    MACRO_START  shift, and go to state 5

    MACRO_START  [reduce using rule 6 (CompUnit)]
    $default     reduce using rule 6 (CompUnit)

    MacroState  go to state 34


State 15

    7 CompUnit: DBGStates .
   18 DBGStates: DBGStates . DBGState

    DBG_START  shift, and go to state 6

    DBG_START  [reduce using rule 7 (CompUnit)]
    $default   reduce using rule 7 (CompUnit)

    DBGState  go to state 35


State 16

   10 CompUnit: DataStates .
   20 DataStates: DataStates . DataState

    DATA_START  shift, and go to state 7

    DATA_START  [reduce using rule 10 (CompUnit)]
    $default    reduce using rule 10 (CompUnit)

    DataState  go to state 36


State 17

    8 CompUnit: MDStates .
   22 MDStates: MDStates . MDState

    ARG_START  shift, and go to state 2

    ARG_START  [reduce using rule 8 (CompUnit)]
    $default   reduce using rule 8 (CompUnit)

    MDState  go to state 37


State 18

   13 ILStates: ILState .

    $default  reduce using rule 13 (ILStates)


State 19

   15 MacroStates: MacroState .

    $default  reduce using rule 15 (MacroStates)


State 20

   17 DBGStates: DBGState .

    $default  reduce using rule 17 (DBGStates)


State 21

   19 DataStates: DataState .

    $default  reduce using rule 19 (DataStates)


State 22

   21 MDStates: MDState .

    $default  reduce using rule 21 (MDStates)


State 23

   37 MDState: ARG_START ':' . STR_TOKEN MDStmts ARG_END ':' STR_TOKEN

    STR_TOKEN  shift, and go to state 38


State 24

   35 Statements: STR_TOKEN .

    $default  reduce using rule 35 (Statements)


State 25

   11 ILMain: IL_VERSION Statements . IL_ENDMAIN
   36 Statements: Statements . STR_TOKEN

    STR_TOKEN   shift, and go to state 39
    IL_ENDMAIN  shift, and go to state 40


State 26

   23 ILState: IL_FUNC STR_TOKEN . ';' STR_TOKEN Statements IL_ENDFUNC ';' STR_TOKEN
   24        | IL_FUNC STR_TOKEN . ';' STR_TOKEN ';' STR_TOKEN Statements IL_ENDFUNC ';' STR_TOKEN

    ';'  shift, and go to state 41


State 27

   25 MacroState: MACRO_START STR_TOKEN . Statements MACRO_END
   26           | MACRO_START STR_TOKEN . ';' STR_TOKEN Statements MACRO_END ';' STR_TOKEN
   27           | MACRO_START STR_TOKEN . ';' STR_TOKEN ';' STR_TOKEN Statements MACRO_END ';' STR_TOKEN

    STR_TOKEN  shift, and go to state 24
    ';'        shift, and go to state 42

    Statements  go to state 43


State 28

   29 DBGState: DBG_START DBG_END .

    $default  reduce using rule 29 (DBGState)


State 29

   28 DBGState: DBG_START Statements . DBG_END
   36 Statements: Statements . STR_TOKEN

    STR_TOKEN  shift, and go to state 39
    DBG_END    shift, and go to state 44


State 30

   30 DataState: DATA_START ':' . STR_TOKEN ':' STR_TOKEN DataEntries ';' '#' DATA_END ':' INT_TOKEN
   31          | DATA_START ':' . STR_TOKEN DataEntries ';' '#' DATA_END

    STR_TOKEN  shift, and go to state 45


State 31

    0 $accept: ILProgram $end .

    $default  accept


State 32

    3 CompUnits: CompUnits CompUnit .

    $default  reduce using rule 3 (CompUnits)


State 33

   14 ILStates: ILStates ILState .

    $default  reduce using rule 14 (ILStates)


State 34

   16 MacroStates: MacroStates MacroState .

    $default  reduce using rule 16 (MacroStates)


State 35

   18 DBGStates: DBGStates DBGState .

    $default  reduce using rule 18 (DBGStates)


State 36

   20 DataStates: DataStates DataState .

    $default  reduce using rule 20 (DataStates)


State 37

   22 MDStates: MDStates MDState .

    $default  reduce using rule 22 (MDStates)


State 38

   37 MDState: ARG_START ':' STR_TOKEN . MDStmts ARG_END ':' STR_TOKEN

    MD_VALUE       shift, and go to state 46
    MD_SAMPLER     shift, and go to state 47
    MD_MEMORY      shift, and go to state 48
    MD_COUNTER     shift, and go to state 49
    MD_INT         shift, and go to state 50
    MD_INTLIST     shift, and go to state 51
    MD_QUEUE       shift, and go to state 52
    MD_POINTER     shift, and go to state 53
    MD_IMAGE       shift, and go to state 54
    MD_PRINTF      shift, and go to state 55
    MD_STRING      shift, and go to state 56
    MD_LGS         shift, and go to state 57
    MD_SEMAPHORE   shift, and go to state 58
    MD_REFLECTION  shift, and go to state 59
    MD_CONSTARG    shift, and go to state 60
    MD_ERRWAR      shift, and go to state 61

    MDStmts  go to state 62
    MDStmt   go to state 63


State 39

   36 Statements: Statements STR_TOKEN .

    $default  reduce using rule 36 (Statements)


State 40

   11 ILMain: IL_VERSION Statements IL_ENDMAIN .

    $default  reduce using rule 11 (ILMain)


State 41

   23 ILState: IL_FUNC STR_TOKEN ';' . STR_TOKEN Statements IL_ENDFUNC ';' STR_TOKEN
   24        | IL_FUNC STR_TOKEN ';' . STR_TOKEN ';' STR_TOKEN Statements IL_ENDFUNC ';' STR_TOKEN

    STR_TOKEN  shift, and go to state 64


State 42

   26 MacroState: MACRO_START STR_TOKEN ';' . STR_TOKEN Statements MACRO_END ';' STR_TOKEN
   27           | MACRO_START STR_TOKEN ';' . STR_TOKEN ';' STR_TOKEN Statements MACRO_END ';' STR_TOKEN

    STR_TOKEN  shift, and go to state 65


State 43

   25 MacroState: MACRO_START STR_TOKEN Statements . MACRO_END
   36 Statements: Statements . STR_TOKEN

    STR_TOKEN  shift, and go to state 39
    MACRO_END  shift, and go to state 66


State 44

   28 DBGState: DBG_START Statements DBG_END .

    $default  reduce using rule 28 (DBGState)


State 45

   30 DataState: DATA_START ':' STR_TOKEN . ':' STR_TOKEN DataEntries ';' '#' DATA_END ':' INT_TOKEN
   31          | DATA_START ':' STR_TOKEN . DataEntries ';' '#' DATA_END

    ';'  shift, and go to state 67
    ':'  shift, and go to state 68

    DataEntries  go to state 69
    DataEntry    go to state 70


State 46

   51 MDStmt: MD_VALUE . ':' CompoundToken ':' CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN

    ':'  shift, and go to state 71


State 47

   47 MDStmt: MD_SAMPLER . ':' CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN

    ':'  shift, and go to state 72


State 48

   44 MDStmt: MD_MEMORY . ':' STR_TOKEN ':' INT_TOKEN
   45       | MD_MEMORY . ':' STR_TOKEN

    ':'  shift, and go to state 73


State 49

   50 MDStmt: MD_COUNTER . ':' CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN

    ':'  shift, and go to state 74


State 50

   46 MDStmt: MD_INT . ':' INT_TOKEN

    ':'  shift, and go to state 75


State 51

   56 MDStmt: MD_INTLIST . ':' IntList

    ':'  shift, and go to state 76


State 52

   59 MDStmt: MD_QUEUE . ':' CompoundToken ':' CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' STR_TOKEN

    ':'  shift, and go to state 77


State 53

   52 MDStmt: MD_POINTER . ':' CompoundToken ':' CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' STR_TOKEN ':' INT_TOKEN ':' INT_TOKEN
   53       | MD_POINTER . ':' CompoundToken ':' CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' STR_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' STR_TOKEN
   54       | MD_POINTER . ':' CompoundToken ':' CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' STR_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' STR_TOKEN ':' INT_TOKEN ':' INT_TOKEN
   55       | MD_POINTER . ':' CompoundToken ':' CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' STR_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' STR_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN

    ':'  shift, and go to state 78


State 54

   48 MDStmt: MD_IMAGE . ':' CompoundToken ':' CompoundToken ':' STR_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN

    ':'  shift, and go to state 79


State 55

   57 MDStmt: MD_PRINTF . ':' IntList ':' STR_TOKEN

    ':'  shift, and go to state 80


State 56

   40 MDStmt: MD_STRING . ':' CompoundToken

    ':'  shift, and go to state 81


State 57

   58 MDStmt: MD_LGS .

    $default  reduce using rule 58 (MDStmt)


State 58

   49 MDStmt: MD_SEMAPHORE . ':' CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN

    ':'  shift, and go to state 82


State 59

   42 MDStmt: MD_REFLECTION . ':' INT_TOKEN ':' CompoundToken

    ':'  shift, and go to state 83


State 60

   43 MDStmt: MD_CONSTARG . ':' INT_TOKEN ':' CompoundToken

    ':'  shift, and go to state 84


State 61

   41 MDStmt: MD_ERRWAR . ':' CompoundToken ':' SpaceCompoundToken

    ':'  shift, and go to state 85


State 62

   37 MDState: ARG_START ':' STR_TOKEN MDStmts . ARG_END ':' STR_TOKEN
   39 MDStmts: MDStmts . MDStmt

    MD_VALUE       shift, and go to state 46
    MD_SAMPLER     shift, and go to state 47
    MD_MEMORY      shift, and go to state 48
    MD_COUNTER     shift, and go to state 49
    MD_INT         shift, and go to state 50
    MD_INTLIST     shift, and go to state 51
    MD_QUEUE       shift, and go to state 52
    MD_POINTER     shift, and go to state 53
    MD_IMAGE       shift, and go to state 54
    MD_PRINTF      shift, and go to state 55
    MD_STRING      shift, and go to state 56
    MD_LGS         shift, and go to state 57
    MD_SEMAPHORE   shift, and go to state 58
    MD_REFLECTION  shift, and go to state 59
    MD_CONSTARG    shift, and go to state 60
    MD_ERRWAR      shift, and go to state 61
    ARG_END        shift, and go to state 86

    MDStmt  go to state 87


State 63

   38 MDStmts: MDStmt .

    $default  reduce using rule 38 (MDStmts)


State 64

   23 ILState: IL_FUNC STR_TOKEN ';' STR_TOKEN . Statements IL_ENDFUNC ';' STR_TOKEN
   24        | IL_FUNC STR_TOKEN ';' STR_TOKEN . ';' STR_TOKEN Statements IL_ENDFUNC ';' STR_TOKEN

    STR_TOKEN  shift, and go to state 24
    ';'        shift, and go to state 88

    Statements  go to state 89


State 65

   26 MacroState: MACRO_START STR_TOKEN ';' STR_TOKEN . Statements MACRO_END ';' STR_TOKEN
   27           | MACRO_START STR_TOKEN ';' STR_TOKEN . ';' STR_TOKEN Statements MACRO_END ';' STR_TOKEN

    STR_TOKEN  shift, and go to state 24
    ';'        shift, and go to state 90

    Statements  go to state 91


State 66

   25 MacroState: MACRO_START STR_TOKEN Statements MACRO_END .

    $default  reduce using rule 25 (MacroState)


State 67

   34 DataEntry: ';' . '#' CompoundToken ':' StrList

    '#'  shift, and go to state 92


State 68

   30 DataState: DATA_START ':' STR_TOKEN ':' . STR_TOKEN DataEntries ';' '#' DATA_END ':' INT_TOKEN

    STR_TOKEN  shift, and go to state 93


State 69

   31 DataState: DATA_START ':' STR_TOKEN DataEntries . ';' '#' DATA_END
   33 DataEntries: DataEntries . DataEntry

    ';'  shift, and go to state 94

    DataEntry  go to state 95


State 70

   32 DataEntries: DataEntry .

    $default  reduce using rule 32 (DataEntries)


State 71

   51 MDStmt: MD_VALUE ':' . CompoundToken ':' CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN

    INT_TOKEN  shift, and go to state 96
    STR_TOKEN  shift, and go to state 97

    CompoundToken  go to state 98


State 72

   47 MDStmt: MD_SAMPLER ':' . CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN

    INT_TOKEN  shift, and go to state 96
    STR_TOKEN  shift, and go to state 97

    CompoundToken  go to state 99


State 73

   44 MDStmt: MD_MEMORY ':' . STR_TOKEN ':' INT_TOKEN
   45       | MD_MEMORY ':' . STR_TOKEN

    STR_TOKEN  shift, and go to state 100


State 74

   50 MDStmt: MD_COUNTER ':' . CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN

    INT_TOKEN  shift, and go to state 96
    STR_TOKEN  shift, and go to state 97

    CompoundToken  go to state 101


State 75

   46 MDStmt: MD_INT ':' . INT_TOKEN

    INT_TOKEN  shift, and go to state 102


State 76

   56 MDStmt: MD_INTLIST ':' . IntList

    INT_TOKEN  shift, and go to state 103

    IntList  go to state 104


State 77

   59 MDStmt: MD_QUEUE ':' . CompoundToken ':' CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' STR_TOKEN

    INT_TOKEN  shift, and go to state 96
    STR_TOKEN  shift, and go to state 97

    CompoundToken  go to state 105


State 78

   52 MDStmt: MD_POINTER ':' . CompoundToken ':' CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' STR_TOKEN ':' INT_TOKEN ':' INT_TOKEN
   53       | MD_POINTER ':' . CompoundToken ':' CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' STR_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' STR_TOKEN
   54       | MD_POINTER ':' . CompoundToken ':' CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' STR_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' STR_TOKEN ':' INT_TOKEN ':' INT_TOKEN
   55       | MD_POINTER ':' . CompoundToken ':' CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' STR_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' STR_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN

    INT_TOKEN  shift, and go to state 96
    STR_TOKEN  shift, and go to state 97

    CompoundToken  go to state 106


State 79

   48 MDStmt: MD_IMAGE ':' . CompoundToken ':' CompoundToken ':' STR_TOKEN ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN

    INT_TOKEN  shift, and go to state 96
    STR_TOKEN  shift, and go to state 97

    CompoundToken  go to state 107


State 80

   57 MDStmt: MD_PRINTF ':' . IntList ':' STR_TOKEN

    INT_TOKEN  shift, and go to state 103

    IntList  go to state 108


State 81

   40 MDStmt: MD_STRING ':' . CompoundToken

    INT_TOKEN  shift, and go to state 96
    STR_TOKEN  shift, and go to state 97

    CompoundToken  go to state 109


State 82

   49 MDStmt: MD_SEMAPHORE ':' . CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN

    INT_TOKEN  shift, and go to state 96
    STR_TOKEN  shift, and go to state 97

    CompoundToken  go to state 110


State 83

   42 MDStmt: MD_REFLECTION ':' . INT_TOKEN ':' CompoundToken

    INT_TOKEN  shift, and go to state 111


State 84

   43 MDStmt: MD_CONSTARG ':' . INT_TOKEN ':' CompoundToken

    INT_TOKEN  shift, and go to state 112


State 85

   41 MDStmt: MD_ERRWAR ':' . CompoundToken ':' SpaceCompoundToken

    INT_TOKEN  shift, and go to state 96
    STR_TOKEN  shift, and go to state 97

    CompoundToken  go to state 113


State 86

   37 MDState: ARG_START ':' STR_TOKEN MDStmts ARG_END . ':' STR_TOKEN

    ':'  shift, and go to state 114


State 87

   39 MDStmts: MDStmts MDStmt .

    $default  reduce using rule 39 (MDStmts)


State 88

   24 ILState: IL_FUNC STR_TOKEN ';' STR_TOKEN ';' . STR_TOKEN Statements IL_ENDFUNC ';' STR_TOKEN

    STR_TOKEN  shift, and go to state 115


State 89

   23 ILState: IL_FUNC STR_TOKEN ';' STR_TOKEN Statements . IL_ENDFUNC ';' STR_TOKEN
   36 Statements: Statements . STR_TOKEN

    STR_TOKEN   shift, and go to state 39
    IL_ENDFUNC  shift, and go to state 116


State 90

   27 MacroState: MACRO_START STR_TOKEN ';' STR_TOKEN ';' . STR_TOKEN Statements MACRO_END ';' STR_TOKEN

    STR_TOKEN  shift, and go to state 117


State 91

   26 MacroState: MACRO_START STR_TOKEN ';' STR_TOKEN Statements . MACRO_END ';' STR_TOKEN
   36 Statements: Statements . STR_TOKEN

    STR_TOKEN  shift, and go to state 39
    MACRO_END  shift, and go to state 118


State 92

   34 DataEntry: ';' '#' . CompoundToken ':' StrList

    INT_TOKEN  shift, and go to state 96
    STR_TOKEN  shift, and go to state 97

    CompoundToken  go to state 119


State 93

   30 DataState: DATA_START ':' STR_TOKEN ':' STR_TOKEN . DataEntries ';' '#' DATA_END ':' INT_TOKEN

    ';'  shift, and go to state 67

    DataEntries  go to state 120
    DataEntry    go to state 70


State 94

   31 DataState: DATA_START ':' STR_TOKEN DataEntries ';' . '#' DATA_END
   34 DataEntry: ';' . '#' CompoundToken ':' StrList

    '#'  shift, and go to state 121


State 95

   33 DataEntries: DataEntries DataEntry .

    $default  reduce using rule 33 (DataEntries)


State 96

   63 CompoundToken: INT_TOKEN .

    $default  reduce using rule 63 (CompoundToken)


State 97

   62 CompoundToken: STR_TOKEN .

    $default  reduce using rule 62 (CompoundToken)


State 98

   51 MDStmt: MD_VALUE ':' CompoundToken . ':' CompoundToken ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN
   60 CompoundToken: CompoundToken . INT_TOKEN
   61              | CompoundToken . STR_TOKEN

    INT_TOKEN  shift, and go to state 122
    STR_TOKEN  shift, and go to state 123
    ':'        shift, and go to state 124


State 99

   47 MDStmt: MD_SAMPLER ':' CompoundToken . ':' INT_TOKEN ':' INT_TOKEN ':' INT_TOKEN
   60 CompoundToken: CompoundToken . INT_TOKEN
   61              | CompoundToken . STR_TOKEN

    INT_TOKEN  shift, and go to state 122
    STR_TOKEN  shift, and go to state 123
    ':'        shift, and go to state 125


State 100

   44 MDStmt: MD_MEMORY ':' STR_TOKEN . ':' INT_TOKEN
   45       | MD_MEMORY ':' STR_TOKEN .

    ':'  shift, and go to state 126

    $default  reduce using rule 45 (MDStmt)


State 101
